--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -25,7 +25,7 @@
         <% @group.users.each do |user| %>
         <li><%= link_to user.name, group_user_path(@group, user) %></li>
       <% end %>
-      <li><%= link_to 'View all', group_user_path(@group) %></li>
+      <li><%= link_to 'View all', group_users_path(@group) %></li>
       </ul>
   </div>
 </div>
