--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="small-4 columns">
 	<h2>Edit Link</h2>
 		<%= render 'form' %>
-		<%= link_to 'Delete', @item, method: :delete, data: { confirm: 'Are you sure you want to delete this link?' } %>
+		<%= link_to 'Delete', [@group, @item], method: :delete, data: { confirm: 'Are you sure you want to delete this link?' } %>
 </div>
 
 
