improved IA for groups

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -13,7 +13,11 @@
       <i class="pull-right"><%= link_to 'Edit', edit_group_path(group) %> </i>
         <h4><%= link_to group.name, group_path(group) %></h4>
         <p><%= truncate(group.description, length: 95) %></p>
-        <%= link_to 'Join', memberships_path(:user_id => @user, :group_id => group), :method => :post %>
+        <% unless group.users.include?(current_user) %>
+          <%= link_to 'Join group', memberships_path(:user_id => @user, :group_id => group), :method => :post %>
+        <% else %>
+          <%= link_to 'Leave group', memberships_path(:user_id => @user, :group_id => group), :method => 'delete', :confirm => 'Are you sure?' %>
+        <% end %>
   </div>
   <% end %>
 </div>
