--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,15 +8,10 @@
     <ul class="right">
       <% if user_signed_in? %>
         <li class="divider"></li>
-        <li><%= link_to "Groups", [@group] %></li>
+        <li><%= link_to "Groups", groups_path %></li>
         <li class="divider"></li>
-        <li><%= link_to "Topics", [@group, @topics] %></li>
-        <li class="divider"></li>
-        <li><%= link_to "Items", [@group, @items] %></li>
-        <li class="divider"></li>
-        <li><%= link_to "Members", [@group, @users] %></li>
-        <li class="divider"></li>
-        <li><%= link_to current_user.name, current_user %></li>
+        <li><%= link_to current_user.name, root_path %></li>
+        <li><%= link_to current_user.groups.first.name, current_user.groups.first  %></li>
         <li><%= link_to "Settings", edit_user_registration_path %></li>
         <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
 
