--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,10 +1,5 @@
-<div class="row">
-  <div class="small-4 columns">
-    <h1><%= @topic.name %></h1>
-  </div>
-  <div class="small-8 columns">
-    <p class="lead"><%= @topic.description %></p>
-  </div>
+<div class="small-12 columns">
+  <h2><%= @topic.name %> <small><%= @topic.description %></small></h2>
 </div>
 
 <div class="small-12 columns">
