--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -18,19 +18,25 @@
   </div>
 </div>
 
-    <div class="small-4 columns content">
+    <div class="small-3 columns content">
+      <h4> Groups </h4>
+      <% @user.groups.each do |group| %>
+      <p><%= link_to group.name, group %></p>
+      <% end %>
+    </div>
+    <div class="small-3 columns content">
       <h4> Topics </h4>
       <% @user.topics.each do |topic| %>
       <p><%= link_to topic.name, group_topic_path(@group, topic) %></p>
       <% end %>
     </div>
-    <div class="small-4 columns content">
+    <div class="small-3 columns content">
       <h4> Links </h4>
     <% @user.items.each do |item| %>
       <p><%= link_to item.title, group_item_path(@group, item) %></p>
     <% end %>
     </div>
-    <div class="small-4 columns content">
+    <div class="small-3 columns content">
       <h4> Comments </h4>
     <% @user.comments.each do |comment| %>
       <p><%= comment.content %></p>
