--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,3 +1,5 @@
+<%= render 'groups/header' %>
+
   <div class="small-7 columns">
     <h2><%= link_to @item.title, @item.url %></h2>
     <p class="lead"><%= @item.description %></p>
