--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,5 +1,8 @@
+<%= render 'groups/header' %>
+
 <div class="small-12 columns">
-  <h2><%= @topic.name %> <small><%= @topic.description %></small></h2>
+  <h4><%= @topic.name %></h4>
+  <p class="lead"><%= @topic.description %></p>
 </div>
 
 <div class="small-12 columns">
