--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,35 +1,31 @@
-
-  <div class="small-12 columns">
-    <h3 class="name"> <%= @group.name %> <small><%= @group.description %></small> </h3>
-
-
-
-</div>
+<%= render 'header' %>
 
 <div class="row">
   <div class="small-2 columns side-nav">
     <div class="panel">
     <h3>Topics</h3>
-    <%= link_to 'Create topic', new_group_topic_path(@group, @topic), :class => 'small button' %>
       <ul class="no-bullet">
         <% @group.topics.each do |topic| %>
         <li><%= link_to topic.name, group_topic_path(@group, topic) %></li>
       <% end %>
-        <li><%= link_to 'View all', group_topics_path(@group) %></li>
       </ul>
       <h3>Members</h3>
       <ul class="no-bullet">
         <% @group.users.each do |user| %>
         <li><%= link_to user.name, group_user_path(@group, user) %></li>
       <% end %>
-      <li><%= link_to 'View all', group_users_path(@group) %></li>
       </ul>
   </div>
 </div>
 
 <div class="small-9 columns">
-  <h3> Links </h3>
-  <%= link_to 'Add link', new_group_item_path(@group, @item), :class => 'small button'%>
+  <div class="small-6 columns">
+    <h3> Links </h3>
+  </div>
+  <div class="small-6 columns">
+    <%= link_to 'Add link', new_group_item_path(@group, @item), :class => 'button'%>
+    <%= link_to 'Create topic', new_group_topic_path(@group, @topic), :class => 'button' %>
+  </div>
       <ul class="no-bullet">
       <% @group.items.each do |item| %>
         <div class="small-6 columns content">
