--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,11 +1,14 @@
 <%= render 'groups/header' %>
 
-<div class="small-4 columns">
-  <h2>New link</h2>
-	<%= render 'form' %>
-</div>
+<div class="row">
+  <div class="small-4 columns">
+    <h2>New link</h2>
+	  <%= render 'form' %>
+  </div>
 
-<div class="small-7 columns">
-	<h3>Tip</h3>
-	<p class="lead"> Make sure you add a description which says why the link you're posting is useful. </p>
+  <div class="small-7 columns">
+	 <h3>Tip</h3>
+	 <p class="lead"> Make sure you add a description which says why the link you're posting is useful. </p>
+  </div>
+  <%= render 'back' %>
 </div>
