--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,9 +1,11 @@
 <%= render 'header' %>
 
-<div class="small-4 columns">
-  <h3>Edit Group</h3>
+<div class="row">
+  <div class="small-4 columns">
+    <h3>Edit Group</h3>
     <%= render 'form' %>
     <%= link_to 'Delete', @group, method: :delete, data: { confirm: 'Are you sure you want to delete this group?' } %>
+  </div>
 </div>
 
 
