--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,23 +1,27 @@
 <div class="row">
-  <div class="small-4 columns">
-    <h1> Groups </h1>
-  </div>
   <div class="small-8 columns">
-    <p><%= link_to 'New group', new_group_path(@group), :class => 'small button'%></p>
+    <h3> Groups </h3>
+    <%= link_to 'New group', new_group_path(@group), :class => 'small button'%>
   </div>
+  <div class="small-4 columns">
+    <div class="content">
+      <p>You can browse any group, but to create topics, post links and comment, you need to join.</p>
+    </div>
+  </div>
+  <hr>
 </div>
 
-<div class="small-12 columns">
-  <% @groups.each do |group| %>
-  <div class="small-4 columns content">
+<div class="row">
+  <div class="small-12 columns">
+    <% @groups.each do |group| %>
+    <div class="small-4 columns">
       <i class="pull-right"><%= link_to 'Edit', edit_group_path(group) %> </i>
-        <h4><%= link_to group.name, group_path(group) %></h4>
-        <p><%= truncate(group.description, length: 95) %></p>
-        <% unless group.users.include?(current_user) %>
-          <%= link_to 'Join group', memberships_path(:user_id => @user, :group_id => group), :method => :post %>
-        <% else %>
-          <%= link_to 'Leave group', memberships_path(:user_id => @user, :group_id => group), :method => 'delete', :confirm => 'Are you sure?' %>
-        <% end %>
-  </div>
+      <h4><%= link_to group.name, group_path(group) %></h4>
+      <p><%= truncate(group.description, length: 95) %></p>
+      <% unless group.users.include?(current_user) %>
+      <%= link_to 'Join group', memberships_path(:user_id => @user, :group_id => group), :method => :post, :class => 'tiny button' %>
+      <% end %>
+    </div>
   <% end %>
+  </div>
 </div>
