--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,9 +1,12 @@
 <%= render 'groups/header' %>
 
-<div class="small-4 columns">
-	<h2>Edit Link</h2>
-		<%= render 'form' %>
-		<%= link_to 'Delete', [@group, @item], method: :delete, data: { confirm: 'Are you sure you want to delete this link?' } %>
+<div class="row">
+  <div class="small-4 columns">
+	 <h2>Edit Link</h2>
+	   <%= render 'form' %>
+	   <p><%= link_to 'Delete', [@group, @item], method: :delete, data: { confirm: 'Are you sure you want to delete this link?' } %></p>
+  </div>
+  <%= render 'back' %>
 </div>
 
 
