--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,15 +1,18 @@
 <%= render 'groups/header' %>
 
+<div class="row">
   <div class="small-7 columns">
-    <h2><%= link_to @item.title, @item.url %></h2>
-    <p class="lead"><%= @item.description %></p>
+    <h4><%= link_to @item.title, @item.url %><small></small></h4>
+    <p><%= @item.description %></p>
     <%= link_to 'Edit link', edit_group_item_path(@group, @item), :class => 'button'%>
     <%= link_to 'Cancel', group_items_path(@group, @item), :class => 'small button' %>
   </div>
 
   <div class="small-4 columns">
     <h4>Comments</h4>
-      <%= render "comments/comments" %>
-      <p><%= render "comments/form" %></p>
+    <%= render "comments/comments" %>
+    <p><%= render "comments/form" %></p>
   </div>
+  <%= render 'back' %>
+</div>
 
