--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,24 +1,31 @@
 <%= render 'groups/header' %>
 
-<div class="small-12 columns">
-  <h4><%= @topic.name %></h4>
-  <p class="lead"><%= @topic.description %></p>
+<div class="row">
+  <div class="small-12 columns">
+    <div class="small-8 columns">
+    <h3><%= @topic.name %> <small> <%= @topic.description %></small></h3>
+  </div>
+  <div class="small-4 columns">
+    <%= link_to 'Edit topic', edit_group_topic_path(@group, @topic), :class => 'tiny button'%>
+  </div>
+  </div>
 </div>
 
-<div class="small-12 columns">
+<div class="row">
+  <div class="small-12 columns">
   <% @topic.items.each do |item| %>
-  <div class="small-4 columns content">
+    <div class="small-4 columns content">
       <i class="pull-right"><%= link_to 'Edit', edit_group_item_path(@group, item) %> </i>
         <h4><%= link_to item.title, item.url %></h4>
         <p><%= truncate(item.description, length: 75) %></p>
         <p><%= link_to 'comments', group_item_path(@group, item) %> <span class="label label-warning"><%= item.comments.count %></span></p>
     </div>
   <% end %>
-
-<div class="small-12 columns">
-  <%= link_to 'Edit topic', edit_group_topic_path(@group, @topic), :class => 'button'%>
-  <%= link_to 'Cancel', group_topics_path(@group), :class => 'small button' %>
+  </div>
 </div>
 
-
+<div class="row">
+  <div class="small-12">
+  <%= render 'back' %>
+  </div>
 </div>
