--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,45 +1,50 @@
 <%= render 'groups/header' %>
 
-<div class="small-12 columns">
-  <div class="small-4 columns">
-    <h2><%= @user.name %></h2>
-  </div>
-  <div class="small-8 columns">
-    <div class="small-8 columns">
-      <ul class="no-bullet pull-right">
-        <li>Created <%= @user.topics.count %> topics</li>
-        <li>Posted <%= @user.items.count %> items</li>
-      </ul>
-    </div>
+<div class="row""
+  <div class="small-12 columns">
     <div class="small-4 columns">
-      <ul class="no-bullet pull-right">
-        <li>Posted <%= @user.comments.count %> comments</li>
-        <li>Belongs to <%= @user.memberships.count %> group</li>
-      </ul>
+      <h2><%= @user.name %></h2>
     </div>
+
+    <div class="small-8 columns">
+      <div class="small-8 columns">
+        <ul class="no-bullet pull-right">
+          <li>Created <%= @user.topics.count %> topics</li>
+          <li>Posted <%= @user.items.count %> items</li>
+        </ul>
+      </div>
+      <div class="small-4 columns">
+        <ul class="no-bullet pull-right">
+          <li>Posted <%= @user.comments.count %> comments</li>
+          <li>Belongs to <%= @user.memberships.count %> group</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+<div class="row">
+  <div class="small-4 columns">
+    <h4> Topics </h4>
+    <% @user.topics.each do |topic| %>
+    <p><%= link_to topic.name, group_topic_path(@group, topic) %></p>
+    <% end %>
+  </div>
+  <div class="small-4 columns">
+    <h4> Links </h4>
+    <% @user.items.each do |item| %>
+    <p><%= link_to item.title, group_item_path(@group, item) %></p>
+    <% end %>
+  </div>
+  <div class="small-4 columns">
+    <h4> Comments </h4>
+    <% @user.comments.each do |comment| %>
+    <p><%= comment.content %></p>
+    <% end %>
+  </div>
+
+  <div class="small-12 columns">
+    <%= link_to "Back to #{@group.name}", @group, :class => 'button' %>
   </div>
 </div>
-
-    <div class="small-4 columns content">
-      <h4> Topics </h4>
-      <% @user.topics.each do |topic| %>
-      <p><%= link_to topic.name, group_topic_path(@group, topic) %></p>
-      <% end %>
-    </div>
-    <div class="small-4 columns content">
-      <h4> Links </h4>
-    <% @user.items.each do |item| %>
-      <p><%= link_to item.title, group_item_path(@group, item) %></p>
-    <% end %>
-    </div>
-    <div class="small-4 columns content">
-      <h4> Comments </h4>
-    <% @user.comments.each do |comment| %>
-      <p><%= comment.content %></p>
-    <% end %>
-    </div>
-  </div>
-
-
 
 
