users can only CRUD stuff if members of a group

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -4,6 +4,7 @@
 
 .row {
   background-color: #ffffff;
+  padding: 15px 15px 0 15px;
 }
 
 // The default font-size is set to 100% of the browser style sheet (usually 16px)
