--- a/app/views/groups/_header.html.erb
+++ b/app/views/groups/_header.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="small-8 columns">
     <h3 class="name"> <%= link_to @group.name, @group %> <small><%= @group.description %></small> </h3>
-    <%= link_to 'Add link', new_group_item_path(@group, @item), :class => 'tiny button'%>
-      <%= link_to 'Create topic', new_group_topic_path(@group, @topic), :class => 'tiny button' %>
+    <%= link_to 'Add link', new_group_item_path(@group, @item), :class => 'tiny button' if @user.groups.include?(@group) %>
+      <%= link_to 'Create topic', new_group_topic_path(@group, @topic), :class => 'tiny button' if @user.groups.include?(@group) %>
   </div>
   <div class="small-4 columns">
       <dl class="sub-nav">
