--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,7 +5,7 @@
     <% @group.items.each do |item| %>
       <div class="small-4 columns">
         <ul class="no-bullet">
-          <i class="pull-right"><%= link_to 'Edit', edit_group_item_path(@group, item) %> </i>
+          <i class="pull-right"><%= link_to 'Edit', edit_group_item_path(@group, item) if @user.groups.include?(@group) %> </i>
           <li><h4><%= link_to item.title, item.url %></h4></li>
           <li><p><%= truncate(item.description, length: 95) %><p></li>
             <ul class="no-bullet inline-list">
