--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,14 +4,13 @@
   <div class="small-7 columns">
     <h4><%= link_to @item.title, @item.url %><small></small></h4>
     <p><%= @item.description %></p>
-    <%= link_to 'Edit link', edit_group_item_path(@group, @item), :class => 'button'%>
-    <%= link_to 'Cancel', group_items_path(@group, @item), :class => 'small button' %>
+    <%= link_to 'Edit link', edit_group_item_path(@group, @item), :class => 'button' if @user.groups.include?(@group) %>
   </div>
 
   <div class="small-4 columns">
     <h4>Comments</h4>
     <%= render "comments/comments" %>
-    <p><%= render "comments/form" %></p>
+    <p><%= render "comments/form" if @user.groups.include?(@group) %></p>
   </div>
   <%= render 'back' %>
 </div>
