--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,7 +1,7 @@
 <%= render 'groups/header' %>
 
-<div class="row">
-  <div class="small-4 columns">
+<div class="row bottom-padding">
+  <div class="small-5 columns">
 	 <h3>Edit Topic</h3>
 	   <%= render 'form' %>
      <p><%= link_to 'Delete', [@group, @topic], method: :delete, data: { confirm: 'Are you sure you want to delete this topic?' } if @topic.items.empty? %></p>
