--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,3 +1,3 @@
 <% @comments.each do |comment| %>
-  <p><%= comment.content %></p>
+  <p><%= link_to comment.user.name, group_user_path(@group, @user), :class => 'tiny button' %>  <%= comment.content %></p>
 <% end %>
