--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -11,12 +11,11 @@
   <hr>
 </div>
 
-<div class="row">
+<div class="row bottom-padding">
   <div class="small-12 columns">
     <% @groups.each do |group| %>
     <div class="small-4 columns">
-      <i class="pull-right"><%= link_to 'Edit', edit_group_path(group) %> </i>
-      <h4><%= link_to group.name, group_path(group) %></h4>
+      <h4><%= link_to group.name, group_path(group) %> </h4>
       <p><%= truncate(group.description, length: 95) %></p>
       <% unless group.users.include?(current_user) %>
       <%= link_to 'Join group', memberships_path(:user_id => @user, :group_id => group), :method => :post, :class => 'tiny button' %>
