--- a/app/views/items/_back.html.erb
+++ b/app/views/items/_back.html.erb
@@ -1,3 +1,3 @@
 <div class="small-12 columns">
-  <%= link_to 'Back to links', group_items_path(@group), :class => 'button' %>
+  <%= link_to 'Back to links', group_items_path(@group) %>
 </div>
