--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,6 +1,6 @@
 <%= render 'groups/header' %>
 
-<div class="row">
+<div class="row bottom-padding">
   <div class="small-4 columns">
     <h2>New link</h2>
 	  <%= render 'form' %>
