--- a/app/views/topics/_back.html.erb
+++ b/app/views/topics/_back.html.erb
@@ -1,3 +1,3 @@
 <div class="small-12 columns">
-  <%= link_to 'Back to topics', group_topics_path(@group), :class => 'left-arrow' %>
+  <%= link_to 'Back to topics', group_topics_path(@group) %>
 </div>
