--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,17 +1,15 @@
 <%= render 'groups/header' %>
 
-<div class="row">
+<div class="row bottom-padding">
   <div class="small-12 columns">
   <% @group.topics.each do |topic| %>
   <div class="small-4 columns">
     <ul class="no-bullet">
-      <i class="pull-right"><%= link_to 'Edit', edit_group_topic_path(@group, topic) if @user.groups.include?(@group) %> </i>
-      <li><h4><%= link_to topic.name, group_topic_path(@group, topic) %></h4></li>
+      <li><h4><%= link_to topic.name, group_topic_path(@group, topic) %> <small> <em><%= link_to 'Edit', edit_group_topic_path(@group, topic) if @user.groups.include?(@group) %></em></small></h4></li>
       <li><p><%= truncate(topic.description, length: 95) %><p></li>
         <ul class="no-bullet inline-list">
           <li><%= link_to 'comments', group_topic_path(@group, topic) if @user.groups.include?(@group) %></li>
           <li><%= link_to topic.user.name, group_user_path(@group, topic.user), :class => 'tiny button' %></li>
-          <li><span class="label"><%= topic.items.count %> link</span> </li>
         </ul>
     </ul>
   </div>
@@ -19,7 +17,7 @@
 </div>
 
   <div class="small-12 columns">
-    <%= link_to "Back to #{@group.name}", @group, :class => 'button' %>
+    <%= link_to "Back to #{@group.name}", @group %>
   </div>
 
 </div>
