--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -2,12 +2,8 @@
 
 <div class="row">
   <div class="small-12 columns">
-    <div class="small-8 columns">
-    <h3><%= @topic.name %> <small> <%= @topic.description %></small></h3>
-  </div>
-  <div class="small-4 columns">
-    <%= link_to 'Edit topic', edit_group_topic_path(@group, @topic), :class => 'tiny button' if @user.groups.include?(@group) %>
-  </div>
+    <h4><%= @topic.name %> <small> <em><%= link_to 'Edit', edit_group_topic_path(@group, @topic) if @user.groups.include?(@group) %></em></small></h4>
+      <%= @topic.description %>
   </div>
 </div>
 
@@ -15,16 +11,15 @@
   <div class="small-12 columns">
   <% @topic.items.each do |item| %>
     <div class="small-4 columns content">
-      <i class="pull-right"><%= link_to 'Edit', edit_group_item_path(@group, item) if @user.groups.include?(@group) %> </i>
-        <h4><%= link_to item.title, item.url %></h4>
-        <p><%= truncate(item.description, length: 75) %></p>
-        <p><%= link_to 'comments', group_item_path(@group, item) if @user.groups.include?(@group) %></p>
+      <h4><%= link_to item.title, item.url %> <small> <em><%= link_to 'Edit', edit_group_item_path(@group, item) if @user.groups.include?(@group) %></em></small></h4>
+      <p><%= truncate(item.description, length: 75) %></p>
+      <p><%= link_to 'comments', group_item_path(@group, item) if @user.groups.include?(@group) %></p>
     </div>
   <% end %>
   </div>
 </div>
 
-<div class="row">
+<div class="row bottom-padding">
   <div class="small-12">
   <%= render 'back' %>
   </div>
