--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'groups/header' %>
 
-<div class="row">
+<div class="row bottom-padding">
   <div class="small-12 columns">
   <% @group.users.each do |user| %>
     <div class="small-4 columns">
@@ -15,6 +15,6 @@
   </div>
 
   <div class="small-12 columns">
-    <%= link_to "Back to #{@group.name}", @group, :class => 'button' %>
+    <%= link_to "Back to #{@group.name}", @group %>
   </div>
 </div>
