--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1222,7 +1222,7 @@ $sub-nav-active-bg: $primary-color;
 
 // Background color for the top bar
 
-$topbar-bg: #3B3B3D !default;
+$topbar-bg: $primary-color !default;
 
 // Height and margin
 
