--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,23 +1,16 @@
 <div class="row">
   <div class="small-7 columns">
-    <h3>Connects you with like minded people to help you share and discover the links that matter to you.</h3>
+    <h3>Welcome to Scrap</h3>
+      <p class="lead">Connect with like minded people to share and discover the links that matter to you.</p>
+      <ul class="no-bullet">
+        <li><span class="label">1</span>  Start or join a group.</li>
+        <li><span class="label">2</span>  Create topics around things you're passionate about.</li>
+        <li><span class="label">3</span>  Post links of all the cool stuff you find.</li>
+        <li><span class="label">4</span>  Chat with other group members.</li>
+        <li><span class="label">4</span>  Contemplate existence.</li>
+      </ul>
   </div>
   <div class="small-5 columns">
     <h3> Sign up </h3>
     <%= render 'devise/registrations/new' %>
-</div>
-
-<div class="row">
-  <div class="small-4 columns">
-    <h4>Groups</h4>
-    <p>stuff to do with groups. </p>
-  </div>
-  <div class="small-4 columns">
-    <h4>Topics</h4>
-    <p>stuff to do with topics. </p>
-  </div>
-  <div class="small-4 columns">
-    <h4>Links</h4>
-    <p>stuff to do with links. </p>
-  </div>
 </div>
