--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="row bottom-padding">
 <div class="small-12 columns">
   <h2> Settings </h2>
   <h4>Edit profile</h4>
@@ -31,3 +32,4 @@
   </div>
 </div>
   <% end %>
+</div>
