--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="row bottom-padding">
 <div class="small-12 columns">
   <h2>Sign up</h2>
 </div>
@@ -19,4 +20,5 @@
 
 <div class="small-12 columns">
   <%= render "devise/shared/links" %>
+</div>
 </div>
