added s to topic path

--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -8,6 +8,6 @@
 
   <div class="actions">
     <%= f.submit nil, :class => 'button'%>
-    <%= link_to 'Cancel', group_topic_path(@group, @topic), :class => 'small button' %>
+    <%= link_to 'Cancel', group_topics_path(@group, @topic), :class => 'small button' %>
   </div>
 <% end %>
