--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1083,7 +1083,7 @@ $sub-nav-list-padding-top: emCalc(20px);
 
 // Definition
 
-// $sub-nav-font-size: emCalc(14px);
+$sub-nav-font-size: emCalc(18px);
 // $sub-nav-font-color: #999;
 // $sub-nav-font-weight: normal;
 // $sub-nav-text-decoration: none;
