--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -6,6 +6,6 @@
       <%= f.association :topic, label: false, :required => true %>
       <% f.error :base %>
 
-      <%= f.submit nil, :class => 'button'%>
-      <%= link_to 'Cancel', group_items_path(@group, @item), :class => 'small button' %>
+      <%= f.submit nil, :class => 'small button'%>
+      <%= link_to 'Cancel', group_items_path(@group), :class => 'small button' %>
 <% end %>
