--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -7,7 +7,7 @@
 </div>
 
   <div class="actions">
-    <%= f.submit nil, :class => 'button'%>
-    <%= link_to 'Cancel', group_topics_path(@group, @topic), :class => 'small button' %>
+    <%= f.submit nil, :class => 'small button'%>
+    <%= link_to 'Cancel', group_topics_path(@group), :class => 'small button' %>
   </div>
 <% end %>
