--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,11 +10,12 @@
         <li class="divider"></li>
         <li><%= link_to "Groups", groups_path %></li>
         <li class="divider"></li>
-        <li><%= link_to current_user.name, root_path %></li>
-
-        <li><%= link_to "Settings", edit_user_registration_path %></li>
-        <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-
+        <li class="has-dropdown"><%= link_to current_user.name, root_path %>
+        <ul class="dropdown"><li class="title back js-generated">
+          <li><%= link_to "Settings", edit_user_registration_path %></li>
+          <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+        </ul>
+      </li>
       <% else %>
         <li><%= link_to "Sign Up", new_user_registration_path %></li>
         <li class="divider"></li>
