--- a/app/views/groups/_header.html.erb
+++ b/app/views/groups/_header.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="small-8 columns">
-    <h3><%= @group.name %> <small><%= @group.description %></small> </h3>
-    <%= link_to 'Add link', new_group_item_path(@group, @item), :class => 'button' if @user.groups.include?(@group) %>
-      <%= link_to 'Create topic', new_group_topic_path(@group, @topic), :class => 'button' if @user.groups.include?(@group) %>
+    <h3><%= link_to @group.name, @group %> <small><%= @group.description %></small> </h3>
+    <%= link_to 'Add link', new_group_item_path(@group, @item), :class => 'button secondary' if @user.groups.include?(@group) %>
+      <%= link_to 'Create topic', new_group_topic_path(@group, @topic), :class => 'button secondary' if @user.groups.include?(@group) %>
   </div>
   <div class="small-4 columns">
       <dl class="sub-nav">
@@ -11,7 +11,6 @@
         <dd class="<%= 'active' if current_page? group_items_path(@group) %>"><%= link_to 'Links', group_items_path(@group) %></dd>
         <dd class="<%= 'active' if current_page? group_users_path(@group) %>"><%= link_to 'Members', group_users_path(@group) %></dd>
       </dl>
-      <p class="lead margin-left"><%= link_to @group.name, @group %></p>
   </div>
   <hr>
 </div>
