--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -40,13 +40,13 @@
       <div class="small-12 columns">
         <ul class="no-bullet inline-list">
         <div class="small-2 columns">
-          <li><%= link_to 'Links', group_items_path(group) %></li>
+          <li><%= link_to 'Links', group_items_path(group) %><span class="round label"><%= group.items.count %></span></li>
         </div>
         <div class="small-2 columns">
-          <li><%= link_to 'Topics', group_topics_path(group) %></p>
+          <li><%= link_to 'Topics', group_topics_path(group) %><span class="round label"><%= group.topics.count %></span></p>
         </div>
         <div class="small-3 columns">
-          <li><%= link_to 'Members', group_users_path(group) %></li>
+          <li><%= link_to 'Members', group_users_path(group) %><span class="round label"><%= group.users.count %></span></li>
         </div>
         <% unless group.users.include?(current_user) %>
         <div class="small-5 columns">
